--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -18,6 +18,7 @@ overrides:
       - '**/ckeditor.scss'
       - '**/color-palette.scss'
       - '**/component-library.scss'
+      - '**/environment-indicator.scss'
       - '**/styles.scss'
     rules:
       scss/at-import-no-partial-leading-underscore: null
