--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -114,3 +114,12 @@ environment-indicator:
   css:
     theme:
       dist/css/environment-indicator.min.css: {}
+
+disable_genesys_button:
+  version: 1.x
+  js:
+    dist/js/disable-genesys-button.min.js: {}
+  dependencies:
+  - core/jquery
+  - core/drupal
+  - core/drupalSettings
