--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,12 @@
     "root": true,
     "env": {
         "browser": true,
+        "node":true,
         "es6": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 2015
+        "ecmaVersion": 2020
     },
     "globals": {
         "Drupal": true,
