--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^8.2.2",
     "breakpoint-sass": "^2.7.1",
     "chokidar": "^3.5.1",
+    "classnames": "^2.3.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-declaration-sorter": "^6.0.3",
     "css-loader": "^6.5.0",
@@ -43,6 +44,8 @@
     "lint-staged": "^13.0.0",
     "md5": "^2.3.0",
     "mini-css-extract-plugin": "^1.6.2",
+    "minivents": "^2.2.1",
+    "mustache": "^4.2.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.0",
     "postcss-cli": "^9.0.0",
