--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "postinstall": "husky install",
     "lint": "lint-staged --allow-empty",
     "lint:js": "eslint src/",
-    "format:js": "eslint --fix src/"
+    "format:js": "eslint --fix src/",
+    "full-reference": "node backstop_data/backstop_dynamic_config full reference",
+    "full-test": "node backstop_data/backstop_dynamic_config full test",
+    "full-approve": "node backstop_data/backstop_dynamic_config full approve",
+    "fast-reference": "node backstop_data/backstop_dynamic_config fast reference",
+    "fast-test": "node backstop_data/backstop_dynamic_config fast test",
+    "fast-approve": "node backstop_data/backstop_dynamic_config fast approve"
   },
   "dependencies": {
     "@nuxt/friendly-errors-webpack-plugin": "^2.5.1",
@@ -88,10 +94,12 @@
     "autoprefixer": "^10.2.6",
     "babel-loader": "^9.0.0",
     "babel-preset-react": "^6.5.0",
+    "backstopjs": "^6.1.0",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-declaration-sorter": "^7.0.3",
     "css-loader": "^6.5.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
