--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
     "rules": {
         "indent": [
             "error",
-            2
+            2,
+            { "SwitchCase": 1 }
         ],
         "linebreak-style": [
             "error",
