UHF-7139: Replace old HDBT Content block with footer top navigation second menu and menu block

--- a/config/install/system.menu.footer-top-navigation-2.yml
+++ b/config/install/system.menu.footer-top-navigation-2.yml
@@ -1,7 +1,7 @@
 langcode: und
 status: true
 dependencies: {  }
-id: footer-top-navigation
-label: 'Footer - Top navigation - First'
+id: footer-top-navigation-2
+label: 'Footer - Top navigation - Second'
 description: 'Top navigation for footer block.'
 locked: false
