--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,63 +1,62 @@
 {
-    "root": true,
-    "env": {
-        "browser": true,
-        "node":true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 2020
-    },
-    "globals": {
-        "Drupal": true,
-        "drupalSettings": true,
-        "drupalTranslations": true,
-        "jQuery": true,
-        "_": true,
-        "Cookies": true,
-        "Backbone": true,
-        "Modernizr": true,
-        "Popper": true,
-        "Shepherd": true,
-        "Sortable": true,
-        "once": true,
-        "CKEDITOR": true,
-        "tabbable": true
-    },
-    "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "warn",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "consistent-return": ["off"],
-        "no-underscore-dangle": ["off"],
-        "max-nested-callbacks": ["warn", 5],
-        "no-plusplus": ["warn", {
-            "allowForLoopAfterthoughts": true
-        }],
-        "no-param-reassign": ["off"],
-        "no-prototype-builtins": ["off"],
-        "valid-jsdoc": ["warn", {
-            "prefer": {
-                "returns": "return",
-                "property": "prop"
-            },
-            "requireReturn": false
-        }],
-        "no-unused-vars": ["warn"],
-        "operator-linebreak": ["error", "after", { "overrides": { "?": "ignore", ":": "ignore" } }]
-    }
+  "root": true,
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "extends": ["airbnb", "drupal", "prettier"],
+
+  "parserOptions": {
+    "ecmaVersion": 2020
+  },
+  "plugins": ["prettier"],
+  "globals": {
+    "Drupal": true,
+    "drupalSettings": true,
+    "drupalTranslations": true,
+    "jQuery": true,
+    "_": true,
+    "Cookies": true,
+    "Backbone": true,
+    "Modernizr": true,
+    "Popper": true,
+    "Shepherd": true,
+    "Sortable": true,
+    "once": true,
+    "CKEDITOR": true,
+    "tabbable": true
+  },
+  "rules": {
+    "prettier/prettier": "error",
+    "semi": ["error", "always"],
+    "consistent-return": ["off"],
+    "no-underscore-dangle": ["off"],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "max-nested-callbacks": ["warn", 5],
+    "no-plusplus": [
+      "warn",
+      {
+        "allowForLoopAfterthoughts": true
+      }
+    ],
+    "no-param-reassign": ["off"],
+    "no-prototype-builtins": ["off"],
+    "valid-jsdoc": [
+      "warn",
+      {
+        "prefer": {
+          "returns": "return",
+          "property": "prop"
+        },
+        "requireReturn": false
+      }
+    ],
+    "no-unused-vars": ["warn"],
+    "operator-linebreak": [
+      "error",
+      "after",
+      { "overrides": { "?": "ignore", ":": "ignore" } }
+    ]
+  }
 }
