--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "webpack --progress --mode=production --config webpack.config.js",
     "postinstall": "husky install",
     "lint": "lint-staged --allow-empty",
-    "lint:js": "eslint --fix src/",
-    "format": "prettier --write ./**/*.js"
+    "lint:js": "eslint --fix src/"
   },
   "dependencies": {
     "@babel/core": "^7.14.3",
