--- a/package.json
+++ b/package.json
@@ -86,12 +86,8 @@
     "eslint-config-drupal": "^5.0.2",
     "eslint-import-resolver-webpack": "0.13.2",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "stylelint": "^14.6.1",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
