UHF-7029: UHF-7029: Add initial POC for calculators

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -25,6 +25,11 @@ accordion:
   dependencies:
     - hdbt/handorgel
 
+helfi_calculator:
+  version: 1.x
+  js:
+    dist/js/helfi_calculator.min.js: {}
+
 throbber:
   version: 1.x
   js:
