--- a/package.json
+++ b/package.json
@@ -79,9 +79,10 @@
   },
   "browserslist": [
     "last 2 versions",
-    "> 1%",
-    "ie > 10",
-    "iOS > 9"
+    "last 3 Chrome versions",
+    "last 3 Safari versions",
+    "last 9 iOS versions",
+    "not dead"
   ],
   "devDependencies": {
     "stylelint": "^14.6.1",
