--- a/package.json
+++ b/package.json
@@ -78,10 +78,7 @@
     ]
   },
   "browserslist": [
-    "last 2 versions",
-    "last 3 Chrome versions",
-    "last 3 Safari versions",
-    "last 9 iOS versions",
+    "last 3 major versions",
     "not dead"
   ],
   "devDependencies": {
