--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,12 +8,9 @@
 
   
   "extends": [ 
-  "airbnb-base",
-  // "plugin:prettier/recommended",
-  "prettier"
-  // "drupal"
-  // "plugin:yml/recommended"
-],
+  "airbnb",
+    "prettier"
+  ],
 
   "parserOptions": {
     "ecmaVersion": 2020
