--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
@@ -77,6 +78,7 @@
     "@types/react-router-dom": "^5.1.5",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^9.0.0",
+    "babel-preset-react": "^6.5.0",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-declaration-sorter": "^6.0.3",
