UHF-7791: added cart components. updated folder name. added tsconfig path aliase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "",
+    "paths": {
+      "@/js/*": ["./src/js/*"],
+      "@/react-search/*": ["./src/js/react-search/*"],
+      "@/types/*": ["./src/js/types/*"]
+    },
     "target": "es6",
     "lib": [
       "dom",
