--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -138,3 +138,12 @@ disable_genesys_button:
   - core/jquery
   - core/drupal
   - core/drupalSettings
+
+event-list:
+  version: 1.x
+  js:
+    dist/js/linkedevents.min.js: {}
+  dependencies:
+    - core/drupalSettings
+    - core/jquery
+    - core/drupal
