--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "handorgel": "^0.5.0",
     "hds-design-tokens": "2.8.0",
     "hds-react": "^2.8.0",
+    "html-react-parser": "^3.0.6",
     "husky": "^8.0.0",
     "joi": "^17.4.0",
     "lint-staged": "^13.0.0",
@@ -62,9 +63,9 @@
     "not dead"
   ],
   "peerDependencies": {
-    "react-virtual":"2.10.4",
-    "react-popper":"2.3.0",
-    "@react-aria/visually-hidden":"3.6.1"
+    "@react-aria/visually-hidden": "3.6.1",
+    "react-popper": "2.3.0",
+    "react-virtual": "2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
