UHF-7791: UHF-7791: change folder structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "",
     "paths": {
       "@/js/*": ["./src/js/*"],
-      "@/react-search/*": ["./src/js/react-search/*"],
+      "@/react/*": ["./src/js/react/*"],
       "@/types/*": ["./src/js/types/*"]
     },
     "target": "es6",
