--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^9.0.0",
     "babel-preset-react": "^6.5.0",
@@ -89,7 +91,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-declaration-sorter": "^6.0.3",
     "css-loader": "^6.5.0",
-    "eslint": "^8.2.0",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-webpack": "0.13.2",
