--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -81,6 +81,7 @@
       "warnOnUnsupportedTypeScriptVersion": true
       },
       "plugins": ["@typescript-eslint"],
+      // Using ts rules from eslint-config-react-app.
       // If adding a typescript-eslint version of an existing ESLint rule,
       // make sure to disable the ESLint rule here.
       "rules": {
@@ -91,12 +92,12 @@
         // "tsc" already handles this (https://github.com/typescript-eslint/typescript-eslint/issues/477)
         "no-undef": "off",
         // Add TypeScript specific rules (and turn off ESLint equivalents)
-        "@typescript-eslint/consistent-type-assertions": "warn",
         "no-array-constructor": "off",
-        "@typescript-eslint/no-array-constructor": "warn",
         "no-redeclare": "off",
-        "@typescript-eslint/no-redeclare": "warn",
         "no-use-before-define": "off",
+        "@typescript-eslint/consistent-type-assertions": "warn",
+        "@typescript-eslint/no-array-constructor": "warn",
+        "@typescript-eslint/no-redeclare": "warn",
         "@typescript-eslint/no-use-before-define": [
           "warn",
           {
