UHF-7791: UHF-7791: see all button. Todos for data attributes.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -134,6 +134,7 @@
         "react/jsx-props-no-spreading": "off",
         "react/no-array-index-key": "off",
         "react/function-component-definition": [1, { "namedComponents": ["arrow-function", "function-declaration"] }],
+        "react/self-closing-comp": 0,
         "import/extensions": 0,
         "import/no-unresolved": 0,
         // These rules are not needed with react 17 JSX transform.
