--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html-react-parser": "^3.0.6",
     "husky": "^8.0.0",
     "joi": "^17.4.0",
+    "jotai": "^1.13.0",
     "lint-staged": "^13.0.0",
     "luxon": "3.0.4",
     "md5": "^2.3.0",
