LOM-266: LOM-266 Added separate js file to include the javascript functionality to profile block functionality

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -143,6 +143,7 @@ nav-toggle:
   version: 1.x
   js:
     dist/js/nav-toggle-dropdown.min.js: {}
+    dist/js/nav-toggle.min.js: {}
   css:
     theme:
       dist/css/nav_global.min.css: {}
