LOM-266: LOM-266 Divide css to new library setup

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -69,16 +69,6 @@ global-styling:
     - hdbt/color-palette
     - hdbt/hdbt-icons
 
-nav-local:
-  version: 1.x
-  css:
-    theme:
-      dist/css/nav_local.min.css: {}
-  js:
-    dist/js/nav-local.min.js: {}
-  dependencies:
-    - hdbt/global-styling
-
 # TODO Convert branding mobile to its own library.
 global-scripting:
   version: 1.x
@@ -135,6 +125,28 @@ nav-toggle:
     dist/js/nav-toggle.min.js: { attributes: { defer: true } }
   css:
     theme:
-      dist/css/nav_global.min.css: {}
+      dist/css/nav_toggle.min.css: {}
   dependencies:
     - core/drupalSettings
+
+nav-local:
+  version: 1.x
+  css:
+    theme:
+      dist/css/nav_local.min.css: {}
+  js:
+    dist/js/nav-local.min.js: {}
+  dependencies:
+    - hdbt/global-styling
+    - hdbt/nav-toggle
+
+nav-global:
+  version: 1.x
+  css:
+    theme:
+      dist/css/nav_global.min.css: {}
+  js:
+    dist/js/nav-global.min.js: {}
+  dependencies:
+    - hdbt/global-styling
+    - hdbt/nav-toggle
