LOM-266: LOM-266 Converted the nav-local to use the nav-toggle library as well

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -135,7 +135,7 @@ nav-local:
     theme:
       dist/css/nav_local.min.css: {}
   js:
-    dist/js/nav-local.min.js: {}
+    dist/js/nav-local.min.js: { attributes: { defer: true } }
   dependencies:
     - hdbt/global-styling
     - hdbt/nav-toggle
