UHF-7791: UHF-7791: update luxon and hds packages.

--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "es6-promise": "^4.1.1",
     "glob": "^8.0.0",
     "handorgel": "^0.5.0",
-    "hds-design-tokens": "2.8.0",
-    "hds-react": "^2.8.0",
+    "hds-design-tokens": "^2.10.0",
+    "hds-react": "^2.10.0",
     "html-react-parser": "^3.0.6",
     "husky": "^8.0.0",
     "joi": "^17.4.0",
     "jotai": "^1.13.0",
     "lint-staged": "^13.0.0",
-    "luxon": "3.0.4",
+    "luxon": "^3.2.1",
     "md5": "^2.3.0",
     "mustache": "^4.2.0",
     "normalize.css": "^8.0.1",
