--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
   "minimum-stability": "dev",
   "require": {
     "drupal/twig_tweak": "^2.0 || ^3.0"
+  },
+  "conflict": {
+    "drupal/helfi_platform_config": "<3.0"
   }
 }
