--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -146,3 +146,12 @@ nav-global:
   dependencies:
     - hdbt/global-styling
     - hdbt/nav-toggle
+
+event-list:
+  version: 1.x
+  js:
+    dist/js/linkedevents.min.js: {}
+  dependencies:
+    - core/drupalSettings
+    - core/jquery
+    - core/drupal
