--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -11,7 +11,7 @@ desktop-menu-toggle:
     dist/js/desktop-menu-toggle.min.js: {}
 
 accordion:
-  version: 1.x
+  version: 1.1
   js:
     dist/js/accordion.min.js: { weight: -50, attributes: { defer: true } }
 
