UHF-7029: UHF-7486: Add drupal and drupalSettings as dependencies

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -19,6 +19,9 @@ helfi_calculator:
   version: 1.x
   js:
     dist/js/helfi_calculator.min.js: {}
+  dependencies:
+    - core/drupal
+    - core/drupalSettings
 
 throbber:
   version: 1.x
