--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -14,6 +14,8 @@ accordion:
   version: 1.1
   js:
     dist/js/accordion.min.js: { weight: -50, attributes: { defer: true } }
+  dependencies:
+    - helfi_toc/table_of_contents
 
 throbber:
   version: 1.x
