UHF-7113: Added hyphenopoly library and enabled it globally

--- a/hdbt.info.yml
+++ b/hdbt.info.yml
@@ -28,6 +28,7 @@ regions:
 libraries:
   - hdbt/global-styling
   - hdbt/global-scripting
+  - hdbt/hyphenopoly
 
 # Libraries extend
 libraries-extend:
