--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hds-react": "^2.13.0",
     "html-react-parser": "^3.0.6",
     "husky": "^8.0.0",
+    "hyphenopoly": "^5.0.0",
     "joi": "^17.4.0",
     "jotai": "^1.13.0",
     "lint-staged": "^13.0.0",
