UHF-7113: Moved hyphenopoly out of dist folder to avoid it getting aggregated, added defer attribute to the library js files so that they don't get aggregated either

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -161,5 +161,9 @@ hyphenopoly:
   version: 5.x
   header: true
   js:
-    dist/js/hyphenopoly_settings.min.js: {}
-    dist/js/hyphenopoly/Hyphenopoly_Loader.js: {}
+    hyphenopoly/hyphenopoly_settings.js: {
+      attributes: { defer: true }
+    }
+    hyphenopoly/Hyphenopoly_Loader.js: {
+      attributes: { defer: true }
+    }
