UHF-7113: Added preprocess false for hyphenopoly library js files

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -161,5 +161,9 @@ hyphenopoly:
   version: 5.x
   header: true
   js:
-    dist/js/hyphenopoly_settings.min.js: {}
-    dist/js/hyphenopoly/Hyphenopoly_Loader.js: {}
+    dist/js/hyphenopoly_settings.min.js: {
+      preprocess: false
+    }
+    dist/js/hyphenopoly/Hyphenopoly_Loader.js: {
+      preprocess: false
+    }
