UHF-7790: Configure building job-search

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -163,3 +163,12 @@ hyphenopoly:
   js:
     dist/js/hyphenopoly_settings.min.js: {}
     dist/js/hyphenopoly/Hyphenopoly_Loader.js: {}
+
+job-search:
+  version: 1.x
+  js:
+    dist/js/job-search.min.js: {}
+  dependencies:
+    - core/drupalSettings
+    - core/drupal
+
