--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "webpack --progress --mode=development --config  webpack.config.js --watch",
     "build": "webpack --progress --mode=production --config webpack.config.js",
+    "preinstall": "npx browserslist@latest --update-db",
     "postinstall": "husky install",
     "lint": "lint-staged --allow-empty",
     "lint:js": "eslint src/",
