UHF-X: add new library and webpack configs.

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -167,3 +167,10 @@ hyphenopoly:
     dist/js/hyphenopoly/Hyphenopoly_Loader.js: {
       preprocess: false
     }
+
+hds-accordion:
+  version: 1.x
+  js:
+    dist/js/hds-accordion.min.js: {}
+  dependencies:
+    - core/drupal
