--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,6 @@ jobs:
       - name: Build assets
         working-directory: ${{ env.DRUPAL_ROOT }}
         run: |
+          ls -la public/themes/contrib/hdbt
           make install-hdbt build-hdbt
 
