UHF-8554: More debugging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Build assets
         working-directory: ${{ env.DRUPAL_ROOT }}
         run: |
+          ls -la /home/runner/drupal
+          ls -la /home/runner/drupal/public/themes/contrib/hdbt
           docker run  --rm --name helfi-node-18.15.0-alpine -v /home/runner/drupal:/app -w /app/public/themes/contrib/hdbt node:18.15.0-alpine "ls -la"
-          ls -la public/themes/contrib/hdbt/
           make install-hdbt build-hdbt
 
