--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,29 +13,10 @@ jobs:
       - name: Set variables
         run: echo "DRUPAL_ROOT=$HOME/drupal" >> $GITHUB_ENV
 
-      - name: Parse $THEME_NAME from composer.json
-        run: echo "THEME_NAME=$(cat composer.json | jq -r .name | awk -F/ '{print $NF}')" >> $GITHUB_ENV
-
       - name: Clone platform
         run: git clone https://github.com/City-of-Helsinki/drupal-helfi-platform.git $DRUPAL_ROOT
 
-      - name: Setup PHP with composer v2
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.1'
-          tools: composer:v2
-
-      - name: Build project
-        working-directory: ${{ env.DRUPAL_ROOT }}
-        run: |
-          composer config repositories.5 path $GITHUB_WORKSPACE
-          composer require drupal/$THEME_NAME -W
-
       - name: Build assets
-        working-directory: ${{ env.DRUPAL_ROOT }}
         run: |
-          ls -la /home/runner/drupal
-          ls -la /home/runner/drupal/public/themes/contrib/hdbt
-          docker run  --rm --name helfi-node-18.15.0-alpine -v /home/runner/drupal:/app -w /app/public/themes/contrib/hdbt/ node:18.15.0-alpine "ls -la"
-          make install-hdbt build-hdbt
+          docker run  --rm --name helfi-node-18.15.0-alpine -v $(pwd):/app -w /app node:18.15.0-alpine "ls -la"
 
