--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,18 +14,17 @@ jobs:
       - name: Set variables
         run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
 
-      - name: Clone platform
-        run: git clone https://github.com/City-of-Helsinki/drupal-helfi-platform.git $DRUPAL_ROOT
-
       - name: Build assets
         run: docker run --rm -v $(pwd):/app -w /app node:${NODE_VERSION}-alpine ""npm install && npm run build""
 
       - name: Commit changed assets
         run: |
-          git config --global user.name github-actions
-          git config --global user.email github-actions@github.com
-          git add dist
-          git commit -m "CI built assets"
-          git push
+          if [[ $(git status --porcelain) ]]; then
+            git config --global user.name github-actions
+            git config --global user.email github-actions@github.com
+            git add dist
+            git commit -m "CI built assets"
+            git push
+          fi
 
 
