UHF-8638: Add build configs
- Add webpack / Drupal configs
- Refactor code to resolve type issues

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -183,3 +183,11 @@ district-and-project-search:
   dependencies:
     - core/drupalSettings
     - core/drupal
+
+news-archive:
+  version: 1.x
+  js:
+    dist/js/news-archive.min.js: {}
+  dependencies:
+    - core/drupalSettings
+    - core/drupal
