--- a/modules/hdbt_default/hdbt_default.info.yml
+++ b/modules/hdbt_default/hdbt_default.info.yml
@@ -3,3 +3,6 @@ type: module
 description: 'Provides theme defaults'
 core_version_requirement: ^9 || ^10
 package: 'Theme'
+#dependencies:
+ #- oembed
+ #- eucookiecompliency
