UHF-3810: Add ticket number to TODO about branding-mobile.js

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -62,7 +62,7 @@ global-styling:
     - hdbt/color-palette
     - hdbt/hdbt-icons
 
-# TODO Convert branding mobile to its own library.
+# TODO: UHF-8773 Convert branding mobile to its own library.
 global-scripting:
   version: 1.x
   js:
