UHF-6187: Added mock cookies.

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ dist/**/*.map
 yarn.lock
 
 # BackstopJS
-backstop_data/fast
-backstop_data/full
+backstop_data/*/bitmaps_reference
+backstop_data/*/bitmaps_test
+backstop_data/*/html_report
