--- a/.github/workflows/v6-sync.yml
+++ b/.github/workflows/v6-sync.yml
@@ -14,10 +14,10 @@ jobs:
           fetch-depth: 0
           ref: '6.x'
 
-      - name: Rebase 6.x branch
+      - name: Merge main to 6.x branch
         run: |
           # Set git user from the latest commit
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
-          git rebase origin/main
-          git push --force
+          git pull origin main
+          git push origin 6.x
