Updated svg-sprite to v3-beta3.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "mustache": "^4.2.0",
     "normalize.css": "^8.0.1",
     "postcss-cli": "^10.0.0",
-    "postcss-combine-media-query": "^1.0.1",
     "postcss-easy-import": "^4.0.0",
     "postcss-import": "^15.0.0",
     "postcss-import-ext-glob": "^2.0.1",
@@ -126,7 +125,7 @@
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.0.0",
     "svg-inline-loader": "^0.8.0",
-    "svg-sprite": "^2.0",
+    "svg-sprite": "https://github.com/svg-sprite/svg-sprite/archive/refs/tags/v3.0.0-beta3.tar.gz",
     "ts-loader": "^9.4.2",
     "typescript": "^5.1.6",
     "webpack": "^5.56.2",
