UHF-9213: Scan twig.engine

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,4 +12,4 @@ parameters:
   checkMissingIterableValueType: false
   treatPhpDocTypesAsCertain: false
   scanFiles:
-    -
+    - ../../../core/themes/engines/twig/twig.engine
